--- a/缓存解决方案.md
+++ b/缓存解决方案.md
@@ -17,7 +17,7 @@
     
         2.BloomFilter[布隆过滤器]
             BloomFilter 类似于一个hbase set 用来判断某个元素（key）是否存在于某个集合中。
-            在缓存之前在加一层 BloomFilter ，在查询的时候先去 BloomFilter 去查询 key 是否存在，如果不存在就直接返回，存在再走查缓存 -> 查 DB
+           在缓存之前在加一层 BloomFilter,在查询的时候先去 BloomFilter 去查询 key 是否存在，如果不存在就直接返回，存在再走查缓存查DB
 
 * 什么是缓存击穿
 
